test/libyul/yulSyntaxTests/dot_leading_function_ret.yul
{
    function x() -> .a {}
}
// ----
// ParserError 2314: (22-23): Expected identifier but got '.'
